[feature] Add check
