# docs/swagger/swagger.json
@@ -115,6 +115,68 @@
                 }
             }
         },
+        "/api/v1/check": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Test"
+                ],
+                "summary": "上传数据",
+                "parameters": [
+                    {
+                        "default": "{\"data\":\"helllo\"}",
+                        "description": "post",
+                        "name": "post",
+                        "in": "body",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "type": "string",
+                        "description": "自定义返回(可选)",
+                        "name": "yes",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "自定义返回(可选)",
+                        "name": "no",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "用户名",
+                        "name": "name",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "密码",
+                        "name": "password",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/app.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/app.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/data": {
             "get": {
                 "produces": [
